Merge object definitions in type union (need improvement)